# RC9CPP

./: .clangd  CMakeLists.txt  README.md  build_clangd.py  m3508_test.ioc
Core/Inc/: stm32f4xx_it.h
Core/Src/: can.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
GDUT_ROBOCON/CONTROL/: xbox.h
GDUT_ROBOCON/DECISION/: EncodingStateMachine.h
MDK-ARM/: m3508_test.uvguix.15120  m3508_test.uvguix.15177  m3508_test.uvoptx  m3508_test.uvprojx  startup_stm32f407xx.lst
MDK-ARM/m3508_test/: acton.d  can.d  can_device.d  chassis.d  cmsis_os2.d  crc_util.d  dma.d  freertos.d  gpio.d  m3508.d  m3508_test.axf  m3508_test.build_log.htm  m3508_test.hex  m3508_test.htm  m3508_test.lnp  m3508_test.map  m3508_test_m3508_test.dep  m6020.d  main.d  motor.d  pid.d  rc9protocol.d  serial_device.d  simple_task.d  stm32f4xx_hal.d  stm32f4xx_hal_can.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  (+10 more)
RC9CPP_API/: IMU_Reader.h  SIMPLE_TASK.cpp
RC9CPP_API/CONTROL/: LADRC.cpp  LADRC.h  PID.cpp  SuperPID.cpp  SuperPID.h  TrapezoidalPlanner.cpp  TrapezoidalPlanner.h  odometry.cpp  odometry.h  pure_pursuit.cpp  pure_pursuit.h  xbox.cpp  xbox.h
RC9CPP_API/DECISION/: EncodingStateMachine.cpp  EncodingStateMachine.h
RC9CPP_API/HARDWARE/: Action.h  Acton.cpp  RC9Protocol.cpp  RC9Protocol.h  (+12 more)
filter/: filter.h
(+45 files in other folders)
